@@ -171,26 +171,26 @@ class TestCaseForGenericProcessor(tests.TestCaseWithTransport):
                     str(expected_kind_changed_entry), kind_changed_files))
 
     def assertContent(self, branch, tree, path, content):
-        file_id = tree.inventory.path2id(path)
+        file_id = tree.path2id(path)
         branch.lock_read()
         self.addCleanup(branch.unlock)
         self.assertEqual(tree.get_file_text(file_id), content)
 
     def assertSymlinkTarget(self, branch, tree, path, target):
-        file_id = tree.inventory.path2id(path)
+        file_id = tree.path2id(path)
         branch.lock_read()
         self.addCleanup(branch.unlock)
         self.assertEqual(tree.get_symlink_target(file_id), target)
 
     def assertExecutable(self, branch, tree, path, executable):
-        file_id = tree.inventory.path2id(path)
+        file_id = tree.path2id(path)
         branch.lock_read()
         self.addCleanup(branch.unlock)
         self.assertEqual(tree.is_executable(file_id), executable)
 
     def assertRevisionRoot(self, revtree, path):
         self.assertEqual(revtree.get_revision_id(),
-                         revtree.inventory.root.children[path].revision)
+                         revtree.get_file_revision(revtree.path2id(path)))
 
 
 class TestImportToPackTag(TestCaseForGenericProcessor):
@@ -1945,10 +1945,10 @@ class TestModifyRevertInBranch(TestCaseForGenericProcessor):
         rtree_a, rtree_b, rtree_c, rtree_d = branch.repository.revision_trees([
             rev_a, rev_b, rev_c, rev_d])
         foo_id = rtree_a.path2id('foo')
-        self.assertEqual(rev_a, rtree_a.inventory[foo_id].revision)
-        self.assertEqual(rev_b, rtree_b.inventory[foo_id].revision)
-        self.assertEqual(rev_c, rtree_c.inventory[foo_id].revision)
-        self.assertEqual(rev_c, rtree_d.inventory[foo_id].revision)
+        self.assertEqual(rev_a, rtree_a.get_file_revision(foo_id))
+        self.assertEqual(rev_b, rtree_b.get_file_revision(foo_id))
+        self.assertEqual(rev_c, rtree_c.get_file_revision(foo_id))
+        self.assertEqual(rev_c, rtree_d.get_file_revision(foo_id))
 
 
 class TestCommitCommands(TestCaseForGenericProcessor):
@@ -1989,4 +1989,4 @@ class TestAddNonUtf8InBranch(TestCaseForGenericProcessor):
         rev_a = branch.last_revision()
         rtree_a = branch.repository.revision_tree(rev_a)
         foo_id = rtree_a.path2id(u'foo\ufffd')
-        self.assertEqual(rev_a, rtree_a.inventory[foo_id].revision)
+        self.assertEqual(rev_a, rtree_a.get_file_revision(foo_id))
